# DoanLib

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeShared.txt
.zed/: debug.json  settings.json  tasks.json
example/: CMakeLists.txt  main.c
include/dn/: app.h  application.h  gpu.h  main.h  math.h  memory.h  raster.h  shared.h  string.h  structs.h  system.h  utility.h
include/dn/gpu/: device.h  swapchain.h
include/dn/mem/: allocator.h  allocators.h  arena.h  malloc.h  virtual.h
include/dn/sys/: window.h
include/dn/util/: file.h
source/: application.c  application.h  main.c  shared.h
source/graphics/: device.c  device.h  swapchain.c  swapchain.h
source/platform/: window.c  window.h
src/: app.c  application.c  application.h  main.c  shared.c  shared.h
src/common/: string.c
src/gpu/: context.c  device.c  device.h  memory.c  swapchain.c  swapchain.h
src/mem/: allocators.c  arena.c  malloc.c  virtual.c
src/memory/: allocators.c  arena.c  large.c  malloc.c  memory.c  string.c  temp.c  virtual.c
src/raster/: raster.c
src/structs/: string.c
src/sys/: window.c  window.h
src/system/: system.c  window.c
src/util/: file.c
src/utility/: file.c
